fixed overflow

--- a/src/assets/css/Header.css
+++ b/src/assets/css/Header.css
@@ -1,5 +1,5 @@
 header {
-  width: 100vw;
+  /* width: 100vw; */
 }
 
 nav {
@@ -14,7 +14,7 @@ nav {
   width: 100%;
 }
 .logo img {
-  width:50%;
+  width: 50%;
   height: 80%;
   object-fit: contain;
   z-index: 1;
